Replace ktorm by exposed Get user by id and get me
