# packages/backend/src/main/kotlin/hollybike/api/routing/resources/Users.kt
@@ -1,0 +1,12 @@
+package hollybike.api.routing.resources
+
+import io.ktor.resources.*
+
+@Resource("/users")
+class Users(val api: API = API()) {
+	@Resource("me")
+	class Me(val users: Users = Users())
+
+	@Resource("{id}")
+	class Id(val users: Users = Users(), val id: Int)
+}
