# packages/backend/src/main/kotlin/hollybike/api/types/association/TAssociation.kt
@@ -1,0 +1,15 @@
+package hollybike.api.types.association
+
+import hollybike.api.repository.Association
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class TAssociation(
+	val id: Int,
+	val name: String
+) {
+	constructor(entity: Association): this(
+		entity.id.value,
+		entity.name
+	)
+}
