# packages/backend/src/main/kotlin/hollybike/api/types/user/TUser.kt
@@ -1,0 +1,29 @@
+package hollybike.api.types.user
+
+import hollybike.api.repository.User
+import hollybike.api.types.association.TAssociation
+import kotlinx.datetime.Instant
+import kotlinx.serialization.SerialName
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class TUser(
+	val id: Int,
+	val email: String,
+	val username: String,
+	val scope: Int,
+	val status: Int,
+	@SerialName("last_login")
+	val lastLogin: Instant,
+	val association: TAssociation
+) {
+	constructor(entity: User): this(
+		id = entity.id.value,
+		email = entity.email,
+		username = entity.username,
+		scope = entity.scope,
+		status = entity.status,
+		lastLogin = entity.lastLogin,
+		association = TAssociation(entity.association)
+	)
+}
